# app-airline

./: README.md
backend/: docker-compose.yml
backend/app/: pyproject.toml
backend/app/alembic/versions/: 2b6a95682fab_create_account_table.py  7f4696c3821e_create_account_table.py  a6fe4a76718e_.py
backend/app/app/: main.py
backend/app/app/auth/: router.py
backend/app/app/booking/: models.py  router.py  schema.py  services.py  validator.py
backend/app/app/catalog/: models.py  router.py  schema.py  services.py
backend/app/app/core/: config.py  hashing.py  security.py  settings.env
backend/app/app/database/: db.py  models.py  session.py
backend/app/app/user/: models.py  router.py  schema.py  services.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/: FlightsCard.jsx  FlightsList.jsx  FlightsSearch.jsx
