[tool.poetry]
name = "app-airline"
version = "0.1.0"
description = ""
authors = ["juandoro <juanorozcodc@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.8"
fastapi = "^0.76.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
SQLAlchemy = "^1.4.36"
alembic = "^1.7.7"
passlib = {extras = ["argon2"], version = "^1.7.4"}
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
psycopg2-binary = "^2.9.3"
argon2-cffi = "^21.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
